--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1296,7 +1296,7 @@ KGH_absolute_monarchy2;Kashatagh Melikdom;;;;;;;;;;;;;x
 KGH_bourgeois_dictatorship;Zangezur Development Committee;;;;;;;;;;;;;x
 KGH_democracy;Zangezur Yazidi Republic;;;;;;;;;;;;;x
 KGH_democracy2;Mountainous Armenia Republic;;;;;;;;;;;;;x
-KGH_fascist_dictatorship;Mountainous Armenia Defense Committee;;;;;;;;;;;;;x
+KGH_fascist_dictatorship;Mountainous Armenia Defence Committee;;;;;;;;;;;;;x
 KGH_federal_democracy;Zangezur FDR;;;;;;;;;;;;;x
 KGH_hms_government;Zangezur Emirate;;;;;;;;;;;;;x
 KGH_hms_government2;United Nakharars of Kashatagh;;;;;;;;;;;;;x
