--- a/TGC/localisation/00_countries-parties.csv
+++ b/TGC/localisation/00_countries-parties.csv
@@ -1917,7 +1917,7 @@ FSM_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;x
 FSM_liberal;Liberal Party;Liberal Party;Liberal Party;;;;;;;;;;;x
 FSM_reactionary;Royal Party;Royal Party;Royal Party;;;;;;;;;;;x
 FSM_socialist;Labour Party;Labour Party;Labour Party;;;;;;;;;;;x
-GAB_anarcho_liberal;Defense of Gabonese Interests;;;;;;;;;;;;;x
+GAB_anarcho_liberal;Defence of Gabonese Interests;;;;;;;;;;;;;x
 GAB_communist;Union of Work and Progress;;;;;;;;;;;;;x
 GAB_conservative;Democratic and Social Union;;;;;;;;;;;;;x
 GAB_fascist;People’s Unity Party;;;;;;;;;;;;;x
