--- a/TGC/localisation/00_events_0060000.csv
+++ b/TGC/localisation/00_events_0060000.csv
@@ -81,10 +81,10 @@ EVTNAME61101;Steam Sawmills: Green Gold;;;;;;;;;;;;;x
 EVTDESC61101;Finland is Europe's most densely forested country. We should make sure to capitalize on the quality and quantity of our timber. Demand is soaring and we should make sure to provide for it.;;;;;;;;;;;;;x
 EVTOPTA61101;Money really does grow on trees;;;;;;;;;;;;;x
 EVTNAME61102;Outokumpu;;;;;;;;;;;;;x
-EVTDESC61102;In 1908, a large deposit of copper was discovered near the town of Kuusjärvi. The mine drove the local economy in the coming years, and eventually the town was renamed in honor of the mine.;;;;;;;;;;;;;x
+EVTDESC61102;In 1908, a large deposit of copper was discovered near the town of Kuusjärvi. The mine drove the local economy in the coming years, and eventually the town was renamed in honour of the mine.;;;;;;;;;;;;;x
 EVTOPTA61102;Heigh-ho, heigh-ho;;;;;;;;;;;;;x
 EVTNAME61103;The Great Famine of 1866;;;;;;;;;;;;;x
-EVTDESC61103;The summer was extremely rainy, and, as a consequence, staple crops failed widely, most notably potatoes and root vegetables, which rotted away in the fields, and conditions for grain in the autumn were unfavorable as well. When the food stores ran out, thousands took to the roads to beg.;;;;;;;;;;;;;x
+EVTDESC61103;The summer was extremely rainy, and, as a consequence, staple crops failed widely, most notably potatoes and root vegetables, which rotted away in the fields, and conditions for grain in the autumn were unfavourable as well. When the food stores ran out, thousands took to the roads to beg.;;;;;;;;;;;;;x
 EVTOPTA61103;Order emergency grain supplies to be delivered to the hardest hit areas.;;;;;;;;;;;;;x
 EVTOPTB61103;We don't have the means to help.;;;;;;;;;;;;;,,,,,,,,,,,,,,,,
 EVTNAME61104;The Great Famine of 1867;;;;;;;;;;;;;x
