--- a/TGC/localisation/00_events_0070000.csv
+++ b/TGC/localisation/00_events_0070000.csv
@@ -46,7 +46,7 @@ EVTNAME72736;The Quebec Purchase with a Caveat;;;;;;;;;;;;;x
 EVTOPTA72736;France agrees to the compromise.;;;;;;;;;;;;;x
 EVTOPTB72736;The deal is off. Our demands were clear and nonnegotiable.;;;;;;;;;;;;;x
 EVTOPTC72736;How dare the Americans! This calls for war!;;;;;;;;;;;;;x
-EVTDESC72737;The Americans have agreed to the deal. Quebec will be transfered to complete French control.;;;;;;;;;;;;;x
+EVTDESC72737;The Americans have agreed to the deal. Quebec will be transferred to complete French control.;;;;;;;;;;;;;x
 EVTNAME72737;The Quebec Purchase Agreed in Full;;;;;;;;;;;;;x
 EVTOPTA72737;The lost children of France are finally returned home!;;;;;;;;;;;;;x
 EVTDESC72738;After the Crusade for Canada, great swaths of lands came under American control. Both Anglo and French Canadians were liberated thanks the Treaty of Philadelphia. France has recently offered to purchase Quebec from us citing cultural bonds and the need to undo the wrongs of the British Empire done against French Canadians. Some in Washington are in favour of such a deal believing that America is an Anglo nation that French Canadians could never integrate in. There is also the fact the French are currently offering a large sum in exchange for Quebec and America is always in need of more funds. Others argue it would be wrong to transfer Quebec to France without first ensuring French Canadians have a right to home rule even if France would not likely pay the full price currently on the table. Many are adamant that to sell American lands to European powers is an offence to the patriots who died for it.;;;;;;;;;;;;;x
@@ -63,9 +63,9 @@ EVTOPTA72740;Damn those colonists! May they freeze in their new territories.;;;;
 EVTDESC72741;The state of Cohauila stands atop one of the largest coal reserves in Mexico. In the mid 19th century, these reserves were discovered near the town of Nueva Villa de Herrera, and when the mine opened, the city changed its name and experienced an immigration boom.;;;;;;;;;;;;;x
 EVTNAME72741;Cohauila coal rush;;;;;;;;;;;;;x
 EVTOPTA72741;Splendid!;;;;;;;;;;;;;x
-EVTDESC72742;Benito Juárez served as president of Mexico from 1858 until his death in 1872. He was the first president of Mexico who was of indigenous origin, and is remembered as being a progressive reformer dedicated to democracy, equal rights for his nation's indigenous peoples, reduction in the power of organized religion, especially the Catholic Church, and a defense of national sovereignty. In $YEAR$, the city of El Paso del Norte changed its name to Ciudad Juárez in his honor.;;;;;;;;;;;;;x
+EVTDESC72742;Benito Juárez served as president of Mexico from 1858 until his death in 1872. He was the first president of Mexico who was of indigenous origin, and is remembered as being a progressive reformer dedicated to democracy, equal rights for his nation's indigenous peoples, reduction in the power of organized religion, especially the Catholic Church, and a defence of national sovereignty. In $YEAR$, the city of El Paso del Norte changed its name to Ciudad Juárez in his honour.;;;;;;;;;;;;;x
 EVTNAME72742;The city of Juárez;;;;;;;;;;;;;x
-EVTOPTA72742;May his memory be honored;;;;;;;;;;;;;x
+EVTOPTA72742;May his memory be honoured;;;;;;;;;;;;;x
 EVTDESC72743;The Mexican War of Independence ended in 1821 with the signing of the Treaty of Cordoba on August 24 and the Declaration of Independence of the Mexican Empire on September 28 of that year. This act was the result of the negotiations of the different factions participating in the war, including Juan O'Donojú, the last viceroy of New Spain on behalf of the monarchy. However, Spain would not recognize the treaties and the declaration on the grounds that O'Donojú was unable to make such arrangements. Now, Mexico has come to us again with a proposal for a treaty of peace and friendship between our two countries. While this would mean recognizing their independence, maybe it's time to face the reality and let this one go.;;;;;;;;;;;;;x
 EVTNAME72743;Friendship treaty with Mexico?;;;;;;;;;;;;;x
 EVTOPTA72743;We will recognize their independence;;;;;;;;;;;;;x
@@ -98,7 +98,7 @@ EVTDESC72752;After years of fighting and bickering amongst the German states, th
 EVTNAME72752;The Leipzig Congress of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA72752;Look how they huddle together in fear! $COUNTRY$ stands resolute and ready!;;;;;;;;;;;;;x
 EVTNAME72753;Sardinian Claims Rebuked;;;;;;;;;;;;;x
-EVTDESC72753;The success of the French in the recent war has led to the Sardinians revoking their claim over the island of Corsica. An embarrasment for $COUNTRY$ to be sure.;;;;;;;;;;;;;x
+EVTDESC72753;The success of the French in the recent war has led to the Sardinians revoking their claim over the island of Corsica. An embarrassment for $COUNTRY$ to be sure.;;;;;;;;;;;;;x
 EVTOPTA72753;Well it was worth a try;;;;;;;;;;;;;x
 EVTNAME72754;The Question of the Italian Crown;;;;;;;;;;;;;x
 EVTDESC72754;Although $COUNTRY$ has tried to control the Italian peninsula through the creation of Lombardy, Sicily, and the Papal rump state, the fires of Italian nationalism continue to burn. Many in Vienna are of the opinion that a unified Italy is impossible to avoid, and it is best that the Italian state be created peacefully through $COUNTRY_ADJ$ guidance rather through a bloody revolution. Others argued that a unified Italy will quickly grow out of our control. Either way a decision must be reached on what to do with Italy. The question then arises who shall rule the Italy. Should it be Lombardy in the north? Perhaps the legacy of Austrian rule in Milan will result in a loyal and capable subject? On the other hand, the rulers of Sicily were once of Habsburg blood, and it could be wise to keep things in the family. There are some who say the crown should to neither the Lombards nor the Sicilians, but rather the Holy Father himself in Rome. And of course there are those boring old sods who want to keep the status quo.;;;;;;;;;;;;;x
@@ -139,7 +139,7 @@ EVTOPTB72763;To the Sicilians!;;;;;;;;;;;;;x
 EVTOPTC72763;To His Holiness the Pope!;;;;;;;;;;;;;x
 EVTOPTD72763;For Napoleon's Sake! Keep the Status Quo!;;;;;;;;;;;;;x
 EVTNAME72764;Sardinian Claims Rebuked;;;;;;;;;;;;;x
-EVTDESC72764;The success of the Austrians in the recent war has led to the Sardinians revoking their claim over the peninsula of Istria. An embarrasment for $COUNTRY$ to be sure.;;;;;;;;;;;;;x
+EVTDESC72764;The success of the Austrians in the recent war has led to the Sardinians revoking their claim over the peninsula of Istria. An embarrassment for $COUNTRY$ to be sure.;;;;;;;;;;;;;x
 EVTOPTA72764;Well it was worth a try;;;;;;;;;;;;;x
 EVTDESC72881;The plantation elite of Cuba have joined the Confederate cause.;;;;;;;;;;;;;x
 EVTNAME72881;Cuba Joins the Confederacy;;;;;;;;;;;;;x
