--- a/TGC/localisation/00_events_10000000.csv
+++ b/TGC/localisation/00_events_10000000.csv
@@ -112,7 +112,7 @@ EVTOPTA44132238;At least we tried.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTDESC44132210;Our planning and funding have proven to be fruitful as a small slave revolt has erupted in $FROMCOUNTRY$. We should act quickly to intervene on behalf of New Africa in their fight for independence.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTNAME44132210;Small Slave revolt in $FROMCOUNTRY$;;;;;;;;;;;;;;;;;;;;;;;x
 EVTOPTA44132210;Liberty for all!;;;;;;;;;;;;;;;;;;;;;;;x
-EVTDESC44132211;A small slave revolt has erupted in a province in the southern states. The insurgency is likely to spread to nearby plantations in neighboring provinces, and we should act quickly to put down the uprising before it does too much damage to our economy. Furthermore, the Free States of America has officially recognized the burgeoning government formed by the rebellious slaves, and there exists the possibility that they might intervene.;;;;;;;;;;;;;;;;;;;;;;;x
+EVTDESC44132211;A small slave revolt has erupted in a province in the southern states. The insurgency is likely to spread to nearby plantations in neighbouring provinces, and we should act quickly to put down the uprising before it does too much damage to our economy. Furthermore, the Free States of America has officially recognized the burgeoning government formed by the rebellious slaves, and there exists the possibility that they might intervene.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTNAME44132211;Large Slave revolt;;;;;;;;;;;;;;;;;;;;;;;x
 EVTOPTA44132211;Send in the troops.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTDESC44132212;Our planning and funding have proven to be fruitful as a massive slave revolt has erupted in $FROMCOUNTRY$. We should act quickly to intervene on behalf of New Africa in their fight for independence.;;;;;;;;;;;;;;;;;;;;;;;x
@@ -194,7 +194,7 @@ EVTDESC99999977;Pljevlja has been cut off from their Turkish masters, let us tak
 EVTNAME99999977;Pljevlja;;;;;;;;;;;;;x
 EVTOPTA99999977;Great!;;;;;;;;;;;;;x
 EVTNAME666666000;News from $FROMCOUNTRY$;;;;;;;;;x
-EVTDESC666666000;In light of the recent events, $FROMCOUNTRY$ has decided to forge an alliance with the Poles in their endeavors against their oppressors.;;;;;;;;;x
+EVTDESC666666000;In light of the recent events, $FROMCOUNTRY$ has decided to forge an alliance with the Poles in their endeavours against their oppressors.;;;;;;;;;x
 EVTOPT666666000A;...;;;;;;;;;x
 EVTNAME666666001;News from $FROMCOUNTRY$;;;;;;;;;x
 EVTDESC666666001;In light of the recent events, $FROMCOUNTRY$ has decided to denounce their oppressors, but hasn't taken any further actions.;;;;;;;;;x
@@ -203,7 +203,7 @@ EVTNAME666666002;News from $FROMCOUNTRY$;;;;;;;;;x
 EVTDESC666666002;In light of the recent events, $FROMCOUNTRY$ has decided to stay neutral in the matter concerning the Polish Revolts.;;;;;;;;;x
 EVTOPT666666002A;...;;;;;;;;;x
 EVTNAME666666003;News from $FROMCOUNTRY$;;;;;;;;;x
-EVTDESC666666003;In light of the recent events, $FROMCOUNTRY$ has decided to support their oppressors in their endeavors against the Polish Revolutionaries.;;;;;;;;;x
+EVTDESC666666003;In light of the recent events, $FROMCOUNTRY$ has decided to support their oppressors in their endeavours against the Polish Revolutionaries.;;;;;;;;;x
 EVTOPT666666003A;...;;;;;;;;;x
 EVTNAME666666004;The Greater Poland uprising of $YEAR$;;;;;;;;;x
 EVTDESC666666004a;Word has reached us that the Poles have been organizing a revolt against our rule. Aided by ?igr? from France, they are beginning to organize in the city of Posen right now.;;;;;;;;;x
@@ -230,7 +230,7 @@ EVTDESC666666013;Widespread uprisings in the former Kingdom of Poland are proof 
 EVT666666013OPTA;We will host a congress;;;;;;;;;x
 EVT666666013OPTB;This is unnecessary;;;;;;;;;x
 EVTNAME666666014;Planning for the Congress;;;;;;;;;x
-EVTDESC666666014;Now that plans for the conference in $CAPITAL$ are underway, $COUNTRY_ADJ$ statesmen are busy trying to determine what our stance on the issue should be. Some feel we should favor relinquishing some territories to the Polish National Committee, as not to upset the balance between the great powers as much as undoing the partitions on the Kingdom of Poland. This could potentially lower our relations with the Great Powers nonetheless. Others believe undoing the Partitions on the Kingdom of Poland should be the priority, even though this might come at the expense of the Great Powers involved who will surely not be pleased.;;;;;;;;;x
+EVTDESC666666014;Now that plans for the conference in $CAPITAL$ are underway, $COUNTRY_ADJ$ statesmen are busy trying to determine what our stance on the issue should be. Some feel we should favour relinquishing some territories to the Polish National Committee, as not to upset the balance between the great powers as much as undoing the partitions on the Kingdom of Poland. This could potentially lower our relations with the Great Powers nonetheless. Others believe undoing the Partitions on the Kingdom of Poland should be the priority, even though this might come at the expense of the Great Powers involved who will surely not be pleased.;;;;;;;;;x
 EVT666666014OPTA;A smaller Poland would be most prudent.;;;;;;;;;x
 EVT666666014OPTB;Undoing the Partitions of Poland is paramount.;;;;;;;;;x
 EVTNAME666666015;$FROMCOUNTRY$ Calls for Congress;;;;;;;;;x
@@ -239,7 +239,7 @@ EVT666666015OPTA;Our representatives shall attend.;;;;;;;;;x
 EVTNAME666666016;$FROMCOUNTRY$ Calls for Congress;;;;;;;;;x
 EVTDESC666666016;We have received word from the $FROMCOUNTRY_ADJ$ that they intend to hold a congress of European powers in their capital to discuss the ability of Russia, Prussia and Austria to maintain stability in the Polish Partitions. Some feel this is a veiled attempt to balk Polish 'aggression'. Either way, we cannot let the congress go on without our attendance. We shall see what manner of 'negotiation' $FROMCOUNTRY$ intends.;;;;;;;;;x
 EVTNAME666666017;$FROMCOUNTRY$ Calls for Congress;;;;;;;;;x
-EVTDESC666666017;We have received word from the $FROMCOUNTRY_ADJ$ that they intend to hold a congress of European powers in their capital to discuss the ability of discuss the ability of Russia, Prussia and Austria to maintain stability in their partitions of Poland. Some feel we should favor relinquishing some territories to the Polish National Committee, as not to upset the balance between the great powers as much as undoing the partitions on the Kingdom of Poland. This could potentially lower our relations with the Great Powers nonetheless. Others believe undoing the Partitions on the Kingdom of Poland should be the priority, even though this might come at the expense of the Great Powers involved who will surely not be pleased. Still, others feel we should not take part in this veiled attempt at dismembering sovereign nations.;;;;;;;;;x
+EVTDESC666666017;We have received word from the $FROMCOUNTRY_ADJ$ that they intend to hold a congress of European powers in their capital to discuss the ability of discuss the ability of Russia, Prussia and Austria to maintain stability in their partitions of Poland. Some feel we should favour relinquishing some territories to the Polish National Committee, as not to upset the balance between the great powers as much as undoing the partitions on the Kingdom of Poland. This could potentially lower our relations with the Great Powers nonetheless. Others believe undoing the Partitions on the Kingdom of Poland should be the priority, even though this might come at the expense of the Great Powers involved who will surely not be pleased. Still, others feel we should not take part in this veiled attempt at dismembering sovereign nations.;;;;;;;;;x
 EVT666666017OPTA;We will not risk our relationship with Russia, Prussia and Austria for this.;;;;;;;;;x
 EVT666666017OPTB;Unacceptable! Veto the proposition!;;;;;;;;;x
 EVTNAME666666018;The Congress of $CAPITAL$: Liberate some parts of Poland.;;;;;;;;;x
