--- a/TGC/localisation/00_governments.csv
+++ b/TGC/localisation/00_governments.csv
@@ -5,7 +5,7 @@ absolute_monarchy2;Absolute Monarchy;;;;;;;;;;;;;x
 absolute_monarchy2_ruler;Your Majesty;;;;;;;;;;;;;x
 bourgeois_dictatorship;Bourgeois Dictatorship;Dictature bourgeoise;Bürgerliche Diktatur;;;;;;;;;;;x
 bourgeois_dictatorship_ruler;Mr. Chairman;;;;;;;;;;;;;x
-colonial_company;Autonomous Dependancy;;;;;;;;;;;;;x
+colonial_company;Autonomous Dependency;;;;;;;;;;;;;x
 colonial_company_ruler;Governor;;;;;;;;;;;;;x
 democracy;Republic;;;;;;;;;;;;;x
 democracy_ruler;Mr. President;;;;;;;;;;;;;x
