--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -26,16 +26,16 @@ brz_politics_check_tooltip_7;§!The country is somewhat politically prepared to a
 brz_politics_check_tooltip_8;§!The country is politically prepared to abolish slavery, Political Consequences will be §Gsomewhat tolerable§!.§b;;;;;;;;;;;;x
 brz_politics_check_tooltip_9;§!The country is politically well prepared to abolish slavery, Political Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
 brz_politics_check_tooltip_10;§!The country is fully politically prepared to abolish slavery, Political Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_0;§! The country is fully dependant on slave work, Economical Consequences will be §Rbeyond dreadful§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_1;§! The country is fully dependant on slave work, Economical Consequences will be §Rextremely dreadful§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_2;§! The country is heavily dependant on slave work, Economical Consequences be §Rdreadful§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_3;§! The country is dependant on slave work, Economical Consequences be §Rextremely dire§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_4;§! The country is still dependant on slave work, Economical Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_5;§! The country still rellies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_6;§! The country still somewhat rellies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_0;§! The country is fully dependent on slave work, Economical Consequences will be §Rbeyond dreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_1;§! The country is fully dependent on slave work, Economical Consequences will be §Rextremely dreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_2;§! The country is heavily dependent on slave work, Economical Consequences be §Rdreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_3;§! The country is dependent on slave work, Economical Consequences be §Rextremely dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_4;§! The country is still dependent on slave work, Economical Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_5;§! The country still relies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_6;§! The country still somewhat relies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_7;§! Some sectors are still dependent on slave work, Economical Consequences be §Ysomewhat tolerable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_8;§! Most, but not all, sectors are free from slave work, Economical Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_9;§! The economy does not relly on slave work, Economical Consequences will be §Greasonable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_9;§! The economy does not rely on slave work, Economical Consequences will be §Greasonable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_10;§! The economy pretty much free from slave work, Economical Consequences will be §Bfew§!.§bb;;;;;;;;;;;;x
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
