--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -104,7 +104,7 @@ AIREASON_ATTACKING_FRIENDS;Attacking Friends;;;;;;;;;;;;;x
 AIREASON_BACKED_BY_ALLY;Backed by Ally;;;;;;;;;;;;;x
 AIREASON_BADBOY;Infamy;;;;;;;;;;;;;x
 AIREASON_BASE_RELUCTANCE;Base Reluctance;;;;;;;;;;;;;x
-AIREASON_CIV_VS_UNCIV;Civilized vs Uncivilized;;;;;;;;;;;;;x
+AIREASON_CIV_VS_UNCIV;Civilised vs Uncivilised;;;;;;;;;;;;;x
 AIREASON_COMMON_FOE;Common Foe;;;;;;;;;;;;;x
 AIREASON_CONSTRUCTING_CB;Strategic Interests;;;;;;;;;;;;;x
 AIREASON_CRISIS_OFFER;$WARGOAL$:;;;;;;;;;;;;;x
@@ -1442,7 +1442,7 @@ COMBAT_FLEE;fleeing;en fuite;;;;;;;;;;;;x
 COMBAT_GAS;Gas attacks while the opponent lacks the technology to defend against it may be devastating.;Les attaques aux gaz, lorsque l'adversaire ne dispose pas de la technologie pour s'en défendre, peuvent être dévastatrices.;;;;;;;;;;;;x
 COMBAT_LEADER_MOD;Leader;Chef;;;;;;;;;;;;x
 COMBAT_LEADER_MOD_ATTACK;Leader attack;;;;;;;;;;;;;x
-COMBAT_LEADER_MOD_DEFENSE;Leader defense;;;;;;;;;;;;;x
+COMBAT_LEADER_MOD_DEFENSE;Leader defence;;;;;;;;;;;;;x
 COMBAT_MORALE;Morale:;Moral :;Moral:;;;;;;;;;;;x
 COMBAT_TERRAIN;Terrain penalty on attacker.;Pénalité du terrain sur l'attaquant.;;;;;;;;;;;;x
 COMBAT_TRIUMPH;triumphant;victorieuse;;;;;;;;;;;;x
@@ -1777,8 +1777,8 @@ CRISIS_TEMPERATURE_MORE_THAN;Higher crisis temperature than ;;;;;;;;;;;;;x
 CRISIS_TITLE_COUNTRY;$COUNTRY_ADJ$ Crisis;;;;;;;;;;;;;x
 CRISIS_WAITING_DESC;At least one side of the crisis is waiting for a Great Power to support them.;;;;;;;;;;;;;x
 CRISIS_WAITING_ON_BACKER;Waiting on Great Power Backer;;;;;;;;;;;;;x
-CRISISDEMANDDESC;$COUNTRY$ is demanding we settle the current crisis in their favor:;;;;;;;;;;;;;x
-CRISISOFFERDESC;$COUNTRY$ is offering to settle the current crisis in our favor:;;;;;;;;;;;;;x
+CRISISDEMANDDESC;$COUNTRY$ is demanding we settle the current crisis in their favour:;;;;;;;;;;;;;x
+CRISISOFFERDESC;$COUNTRY$ is offering to settle the current crisis in our favour:;;;;;;;;;;;;;x
 crossing;Crossing;Passage;;;;;;;;;;;;x
 CRUDE_OIL_IS_ATLEAST_TRIGGER;Crude oil is at least §Y$VALUE$§W.\n;Il y a au moins §Y$VALUE$§W de pétrole brut.\n;;;;;;;;;;;;x
 CRUDE_OIL_IS_NOT_TRIGGER;Crude oil is not §Y$VALUE$§W.\n;Le stock de pétrole brut n'est pas de §Y$VALUE$§W.\n;;;;;;;;;;;;x
@@ -2092,8 +2092,8 @@ DIPLOMACY_THEY_BETTER_OPINION2;They need to have at least equal opinion of us to
 DIPLOMACY_TOTAL;Rank;Classement;;;;;;;;;;;;x
 DIPLOMACY_TOTAL_LABEL;Total:;Total :;;;;;;;;;;;;x
 DIPLOMACY_TRUCE_WITH;Truce with:;Trêve avec :;;;;;;;;;;;;x
-DIPLOMACY_UNCIVILIZEDNATION_APPEND;(Uncivilized);(Non civilisé);;;;;;;;;;;;x
-DIPLOMACY_UNCIVILIZEDNATION_STATUS;Uncivilized Nation;Nation non civilisée;;;;;;;;;;;;x
+DIPLOMACY_UNCIVILIZEDNATION_APPEND;(Uncivilised);(Non civilisé);;;;;;;;;;;;x
+DIPLOMACY_UNCIVILIZEDNATION_STATUS;Uncivilised Nation;Nation non civilisée;;;;;;;;;;;;x
 DIPLOMACY_WAR_EXHAUSTION;War Exhaustion: §Y$VALUE$%§W;Épuisement de guerre : §Y$VALUE$%§W;;;;;;;;;;;;x
 DIPLOMACY_WAR_HASTRUCE;§RWe have a truce with §Y$COUNTRY$§R until §Y$DATE$§R. Declaring war on them cause a significant hit to our international prestige;§RNous observons une trêve avec §Y$COUNTRY$§R jusqu'à la date suivante : §Y$DATE$§W. Si nous déclarons la guerre à ce pays, notre prestige international en pâtira.;;;;;;;;;;;;x
 DIPLOMACY_WAR_INFO;Show wars;Afficher les guerres;;;;;;;;;;;;x
@@ -2733,7 +2733,7 @@ HAVE_A_X_INY;Have a $X$ in $Y$;Ont un(e) $X$ en $Y$;Ein $X$ in $Y$ haben;;;;;;;;
 HAVE_ALLIANCE_WITH;Allied with ;Sont alliés avec ;Bündnis haben mit ;;;;;;;;;;;x
 HAVE_ANY_NEIGHBOR;Have at least one neighbour;Ont au moins un voisin;;;;;;;;;;;;x
 HAVE_AT_LEAST_ONE_OWNED_NEIGHBORING_PROVINCE;Have at least one owned neighbouring province such that:;;;;;;;;;;;;;x
-HAVE_AT_LEST_ONE_OWNED_NEIGHBORING_PROVINCE;Have at least one owned neighboring province such that:;Détiennent au moins une province voisine telle que :;Mindestens eine besetzte Nachbarprovinz;;;;;;;;;;;x
+HAVE_AT_LEST_ONE_OWNED_NEIGHBORING_PROVINCE;Have at least one owned neighbouring province such that:;Détiennent au moins une province voisine telle que :;Mindestens eine besetzte Nachbarprovinz;;;;;;;;;;;x
 HAVE_CASUS_BELLI_AGAINST;Have claims against ;Revendiquent;;;;;;;;;;;;x
 HAVE_CONTROL_OVER;Control ;Contrôlent ;Kontrolle haben über;;;;;;;;;;;x
 HAVE_CORE_IN;Have a core in ;Ont un territoire clé dans ;Kernprovinz haben in;;;;;;;;;;;x
@@ -2785,7 +2785,7 @@ HAVE_MORE_TOTAL_PORTS_THAN;Have equal or more ports than: ;;;;;;;;;;;;;x
 HAVE_MORE_UNITS_IN_THAN;Units in $PROVINCE$ at least ;Ont, dans la province $PROVINCE$, un nombre d'unités d'au moins ;Mehr Einheiten in $PROVINCE$ haben als ;;;;;;;;;;;x
 HAVE_MORE_VASSALS_THAN;Have more puppets than ;Nous avons plus de satellites que;;;;;;;;;;;;x
 HAVE_N0T_ALLIANCE_WITH;NOT allied with ;;;;;;;;;;;;;x
-HAVE_NO_OWNED_NEIGHBORING_PROVINCE;Have no owned neighboring province such that:;Ne détiennent pas de province voisine telle que :;Keine besetzte Nachbarprovinz;;;;;;;;;;;x
+HAVE_NO_OWNED_NEIGHBORING_PROVINCE;Have no owned neighbouring province such that:;Ne détiennent pas de province voisine telle que :;Keine besetzte Nachbarprovinz;;;;;;;;;;;x
 HAVE_NO_UNITS_IN;$COUNTRY$ have NO units in $PROVINCE$.;$COUNTRY$ n'a AUCUNE unité dans la province $PROVINCE$.;;;;;;;;;;;;x
 HAVE_NO_UNITS_IN_BATTLE;Have NO units in battle;;;;;;;;;;;;;x
 HAVE_NO_UNITS_WITH_A_LEADER;Have NO units with a leader;;;;;;;;;;;;;x
@@ -3545,7 +3545,7 @@ MILITARY_MAX_WAR_EXHAUSTION_TOOLTIP;Max War exhaustion: $VALUE$;Épuisement de gu
 MILITARY_MILITARY_TACTICS;Military tactics;Tactiques militaires;;;;;;;;;;;;x
 MILITARY_MOBILIZE;Mobilize our Armed Forces;Mobiliser nos forces armées;;;;;;;;;;;;x
 MILITARY_MOBILIZE_CRISIS_IMPACT;§RMobilizing while on a side in a crisis will increase temperature and lead to war!§W;;;;;;;;;;;;;x
-MILITARY_MOBILIZE_DESC;Apart from our standing army, our country can also, in the event of war, draw upon additional resources in the form of conscript levies. By ordering mobilization, our conscript armies will begin amassing at major population centres and begin preparations for full out war. While mobilization may be essential to overcoming a sizable enemy invasion, we must always be wary of its impact on the national economy.;Outre son armée de métier, en cas de guerre, notre pays peut aussi avoir recours à la conscription. Lorsqu'un ordre de mobilisation est émis, nos armées de conscrits se rassemblent dans les principaux centres démographiques et se préparent à engager une guerre totale. Si la mobilisation est essentielle pour repousser une invasion ennemie d'envergure, mieux vaut se méfier de son impact sur l'économie nationale.;;;;;;;;;;;;x
+MILITARY_MOBILIZE_DESC;Apart from our standing army, our country can also, in the event of war, draw upon additional resources in the form of conscript levies. By ordering mobilization, our conscript armies will begin amassing at major population centres and begin preparations for full out war. While mobilization may be essential to overcoming a sizeable enemy invasion, we must always be wary of its impact on the national economy.;Outre son armée de métier, en cas de guerre, notre pays peut aussi avoir recours à la conscription. Lorsqu'un ordre de mobilisation est émis, nos armées de conscrits se rassemblent dans les principaux centres démographiques et se préparent à engager une guerre totale. Si la mobilisation est essentielle pour repousser une invasion ennemie d'envergure, mieux vaut se méfier de son impact sur l'économie nationale.;;;;;;;;;;;;x
 MILITARY_MORALE_TOOLTIP;Morale: §Y$VALUE$%§W;Moral : §Y$VALUE$%§W;;;;;;;;;;;;x
 MILITARY_MOVING_TOOLTIP;This unit is moving.\nIt will arrive in §Y$LOCATION$§W at §Y$DATE$§W.;Cette unité est en cours de déplacement.\nElle arrivera à sa destination, §Y$LOCATION$§W, le §Y$DATE$§W.;;;;;;;;;;;;x
 MILITARY_NAVY_CONSTRUCTION_TOOLTIP;Ships under construction: §Y$VALUE$§W;Navires en construction : §Y$VALUE$§W;;;;;;;;;;;;x
@@ -5655,7 +5655,7 @@ TECH_MINE_SIZE;Mine Size;Taille de la mine;;;;;;;;;;;;x
 TECH_MONTHLY_RESEARCHPOINTS_BASE_TOOLTIP;Monthly base research points: §Y$VALUE$§W;§YPoints de recherche§W de base mensuels : §Y$VALUE$§W;;;;;;;;;;;;x
 TECH_MONTHLY_RESEARCHPOINTS_TOOLTIP;$LITERACY$ literate §Y$POPTYPE$§W gives us §Y$VALUE$ research points§W;L'alphabétisation $LITERACY$ de §Y$POPTYPE$§W nous confère §Y$VALUE$ points de recherche§W;;;;;;;;;;;;x
 TECH_MONTHLY_RESEARCHPOINTS_TOTAL_TOOLTIP;Monthly research points: §G+$VALUE$§W;§YPoints de recherche§W mensuels : §Y$VALUE$§W;;;;;;;;;;;;x
-TECH_MONTHLY_RESEARCHPOINTS_UNCIVILIZED;Uncivilized:;Non civilisé :;;;;;;;;;;;;x
+TECH_MONTHLY_RESEARCHPOINTS_UNCIVILIZED;Uncivilised:;Non civilisé :;;;;;;;;;;;;x
 TECH_ONCE_1;$TYPE$;$TYPE$;;;;;;;;;;;;x
 TECH_ONCE_2;$TITLE$, we have finished the research of $TYPE$ which will give us the following benefits.;$TITLE$, nous avons terminé la recherche de : $TYPE$, ce qui nous donnera les avantages suivants.;;;;;;;;;;;;x
 TECH_ONCE_3;$EFFECT$;$EFFECT$;;;;;;;;;;;;x
