--- a/TGCApocalypse1836/localisation/00_Apocalypse1836.csv
+++ b/TGCApocalypse1836/localisation/00_Apocalypse1836.csv
@@ -9,7 +9,7 @@ WAS;Wasteland;;;;;;;;;;;;;x
 WAS_ADJ;Forsaken;;;;;;;;;;;;;x
 undead;Undead;;;;;;;;;;;;;x
 zombie_rebels_army;Army of The Dead;;;;;;;;;;;;;x
-zombie_rebels_desc;Zombies are reanimated corpses. The brain retains base facilities, namely motor function. In its nearly mindless state, it has no grasp of emotion, personality, or sensation. However, in rare cases, some zombies reflexively perform activities from their past lives. Their rotting bodies operate on a much lower level than a normal human. Circulatory, respiratory, and digestive systems are unaffected by reanimation. Labored breathing, choking, and moaning are therefore reflexive as no oxygen is carried through the blood. Furthermore, the nervous system functions primarily within the brain and sensory reception is minimal at best. The undead are incapable of fatigue and endlessly pursue their victims. Subsequently, a zombie may chase its victim even if it’s missing limbs. Therefore, the only way to kill a zombie is by destroying its brain. The only observable action a zombie takes part in is hunting and eating living organisms, especially humans. Approach with extreme caution.;;;;;;;;;;;;;x
+zombie_rebels_desc;Zombies are reanimated corpses. The brain retains base facilities, namely motor function. In its nearly mindless state, it has no grasp of emotion, personality, or sensation. However, in rare cases, some zombies reflexively perform activities from their past lives. Their rotting bodies operate on a much lower level than a normal human. Circulatory, respiratory, and digestive systems are unaffected by reanimation. Laboured breathing, choking, and moaning are therefore reflexive as no oxygen is carried through the blood. Furthermore, the nervous system functions primarily within the brain and sensory reception is minimal at best. The undead are incapable of fatigue and endlessly pursue their victims. Subsequently, a zombie may chase its victim even if it’s missing limbs. Therefore, the only way to kill a zombie is by destroying its brain. The only observable action a zombie takes part in is hunting and eating living organisms, especially humans. Approach with extreme caution.;;;;;;;;;;;;;x
 zombie_rebels_name;Zombies;;;;;;;;;;;;;x
 zombie_rebels_title;Zombie;;;;;;;;;;;;;x
 zombified_army;Undead Army;;;;;;;;;;;;;x
@@ -26,11 +26,11 @@ ap_prov_timer_desc;The outbreak got out of control, there's nothing to be done.;
 ap_lock_down_modifier;Closed Borders.;;;;;;;;;;;;;x
 ap_lock_down_modifier_desc;We have closed our borders in an attempt to stop the entrance of infected immigrants.;;;;;;;;;;;;;x
 ap_quarantine_modifier;Quarantine;;;;;;;;;;;;;x
-ap_quarantine_modifier_desc;We are isolating people and neighborhoods that are possible infected to avoid internal spread.;;;;;;;;;;;;;x
+ap_quarantine_modifier_desc;We are isolating people and neighbourhoods that are possible infected to avoid internal spread.;;;;;;;;;;;;;x
 ap_lock_down;Close the borders!;;;;;;;;;;;;;x
 ap_lock_down;We can close our borders, while it will hinder our research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;;;;;;x
 ap_lock_down_title;Close the borders!;;;;;;;;;;;;;x
-ap_lock_down_desc;We may close our borders to avoid infected immigrants, but that would rinder our research capalabilities and heavily reduce immigration.;;;;;;;;;;;;;x
+ap_lock_down_desc;We may close our borders to avoid infected immigrants, but that would render our research capabilities and heavily reduce immigration.;;;;;;;;;;;;;x
 ap_remove_lock_down_title;Reopen the borders.;;;;;;;;;;;;;x
 ap_remove_lock_down_desc;It's better if we open our borders and go back to normality.;;;;;;;;;;;;;x
 ap_state_of_emergency_title;Declare State of Emergency;;;;;;;;;;;;;x 
@@ -38,11 +38,11 @@ ap_state_of_emergency_desc;By declaring a state of emergency, we have suspended 
 ap_state_of_emergency;State of Emergency;;;;;;;;;;;;;x
 ap_end_state_of_emergency_title;End the State of Emergency;;;;;;;;;;;;;x
 ap_end_state_of_emergency_desc;The State of Emergency is no longer needed, we can resume our countries normal activities and move on.;;;;;;;;;;;;;x 
-ap_sieze_assets;Sieze all assets!;;;;;;;;;;;;;x
-ap_sieze_assets_title;Sieze all assets!;;;;;;;;;;;;;x
-ap_sieze_assets_desc;The government must do whatever it takes to ensure our country's survival! In that time of despair, we may sieze all the assets we can from the people. I'm sure they will understand...;;;;;;;;;;;;;x
+ap_sieze_assets;Seize all assets!;;;;;;;;;;;;;x
+ap_sieze_assets_title;Seize all assets!;;;;;;;;;;;;;x
+ap_sieze_assets_desc;The government must do whatever it takes to ensure our country's survival! In that time of despair, we may seize all the assets we can from the people. I'm sure they will understand...;;;;;;;;;;;;;x
 ap_scouts_title;Scout for New Land;;;;;;;;;;;;;x
-ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker and be able to resettle faster.;;;;;;;;;;;;;x
+ap_scouts_desc;We can fund expeditions into the uncolonised wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker and be able to resettle faster.;;;;;;;;;;;;;x
 ap_scouts_turn_off_title;Stop the search for New Land;;;;;;;;;;;;;x
 ap_scouts_turn_off_desc;We are no longer in the position to waste money in the wasteland. We need to take care of what we have first.;;;;;;;;;;;;;x
 scouts_activated;Scouting for new land;;;;;;;;;;;;;x
@@ -70,7 +70,7 @@ ap_conservative_rebuild;Conservative Rebuild;;;;;;;;;;;;;x
 ap_conservative_rebuild;We are taking things slow and playing safe.;;;;;;;;;;;;;x
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;;;;;;x
 ap_temperace_rebuild_desc;Temperance is key to survive.;;;;;;;;;;;;;x
-ap_agressive_rebuild;Agressive Rebuild;;;;;;;;;;;;;x
+ap_agressive_rebuild;Aggressive Rebuild;;;;;;;;;;;;;x
 ap_agressive_rebuild;The world is ours to conquer!;;;;;;;;;;;;;x
 ap_ruins;Ruined Country;;;;;;;;;;;;;x
 ap_ruins_desc;The country is in ruins, there's nothing to be done.;;;;;;;;;;;;;x
