--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -21,9 +21,9 @@ option_break_brazil_desc;Dismantles Brazil into it's states. This can not be rev
 option_break_brazil_title;Dismantle Brazil;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_desc;Turns the ACW requirements back to normal.;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_title;Option: Disable Bypass American Civil War requirements;;;;;;;;;;;;;x
-option_disable_easter_eggs_desc;Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
+option_disable_easter_eggs_desc;Easter Egg events are flavour events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
 option_disable_easter_eggs_title;Option: Disable Easter Eggs;;;;;;;;;;;;;x
-option_disable_extra_flavour_desc;TGC has intergrated some ahistorical and wacky submods allowing players to take their nation down implausible alternative paths. You may prefer to play without these. (The AI will never take major ahistorical options regardless of this decision);;;;;;;;;;;;;x
+option_disable_extra_flavour_desc;TGC has integrated some ahistorical and wacky submods allowing players to take their nation down implausible alternative paths. You may prefer to play without these. (The AI will never take major ahistorical options regardless of this decision);;;;;;;;;;;;;x
 option_disable_extra_flavour_title;Option: Disable Extra Flavour;;;;;;;;;;;;;x
 option_disable_hpm_crisis_desc;In TGC, crises only start after 1870, when Revolution and Counter-revolution is researched and an event fires. This is to stop stuff like independent Ireland in 1840 because of the militancy that the famine generates, among other weird crises. Selecting this option will remove these restrictions and allow crises to happen from the start of the game, like it happens in vanilla Victoria 2.;;;;;;;;;;;;;x
 option_disable_hpm_crisis_title;Option: Enable Crisis From The Start;;;;;;;;;;;;;x
@@ -33,7 +33,7 @@ option_disable_options_desc;This will hide all optional tweaks to vanilla TGC. Y
 option_disable_options_title;Hide ‘Options’ Decisions;;;;;;;;;;;;;x
 option_disable_starting_party_loyalty_desc;This option will remove all starting party loyalty.;;;;;;;;;;;;;x
 option_disable_starting_party_loyalty_title;Option: Remove Starting Party Loyalty;;;;;;;;;;;;;x
-option_disable_uk_isolation_desc;Historically the UK did not ally major european powers, and so in TGC the UK is forced to break alliances with any Great Powers who aren't Portugal, Belgium, Japan or the Ottomans. You may wish to turn this off.;;;;;;;;;;;;;x
+option_disable_uk_isolation_desc;Historically the UK did not ally major European powers, and so in TGC the UK is forced to break alliances with any Great Powers who aren't Portugal, Belgium, Japan or the Ottomans. You may wish to turn this off.;;;;;;;;;;;;;x
 option_disable_uk_isolation_title;Option: Disable Splendid Isolation For The UK;;;;;;;;;;;;;x
 option_disable_unite_as_puppet_decisions_desc;This option will disable decisions which allow a Great Power to unite some of their spherelings into a culture union puppet (Italy, Iberia, Scandinavia, Yugoslavia, Romania, Arabia, Transcaucasia, Turkestan and the United Baltic Duchy) as some players consider these to be OP and prefer to play without them.;;;;;;;;;;;;;x
 option_disable_unite_as_puppet_decisions_title;Option: Disable 'Unite as Puppet' Decisions;;;;;;;;;;;;;x
@@ -45,7 +45,7 @@ option_disable_workplace_events_desc;A few province events related to the workpl
 option_disable_workplace_events_title;Option: Disable Workplace Events;;;;;;;;;;;;;x
 option_disable_warship_commissions_desc;Disable the decisions to commission a warship from another country or take a warship commission from another country.;;;;;;;;;;;;;x
 option_disable_warship_commissions_title;Option: Disable Warship Commission decisions;;;;;;;;;;;;;x
-option_enable_lucky_nations_desc;Sometimes in this world, nations seem to be blessed by God in certain periods. Their leaders are brilliant, their people are hardy, they excel in warfare, produce amazing works of culture, and their economies boom. Do we live in such a world? If Lucky Nations are enabled ten random (non-great power) civilized nations and five random uncivilized nations will be given special powerful bonuses that will enable them to shake up the status quo.;;;;;;;;;;;;;x
+option_enable_lucky_nations_desc;Sometimes in this world, nations seem to be blessed by God in certain periods. Their leaders are brilliant, their people are hardy, they excel in warfare, produce amazing works of culture, and their economies boom. Do we live in such a world? If Lucky Nations are enabled ten random (non-great power) civilized nations and five random uncivilised nations will be given special powerful bonuses that will enable them to shake up the status quo.;;;;;;;;;;;;;x
 option_enable_lucky_nations_title;Option: Enable Lucky Nations;;;;;;;;;;;;;x
 option_enable_money_hoarder_desc;Money hoarder modifiers will trigger when a country has too much money in its stockpile and reduce its tax efficiency, forcing money back into the economy.;;;;;;;;;;;;;x
 option_enable_money_hoarder_title;Option: Enable Money Hoarder Modifiers;;;;;;;;;;;;;x
@@ -53,7 +53,7 @@ setup_menu_desc;Open the Setup Menu, allowing you to customize and configure the
 setup_menu_title;Open TGC's Setup;;;;;;;;;;;;;x
 option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. Beware: Money is deducted on monthly basis from your treasury. Pay attention to it lest you go bankrupt.;;;;;;;;;;;;;x
 option_enable_overrides_title;Option: Enable Override Decisions;;;;;;;;;;;;;x
-option_enable_spectator_mode_desc;Disable ‘Winds of Westernization’ events for spectator games as an uncivilized nation.;;;;;;;;;;;;;x
+option_enable_spectator_mode_desc;Disable ‘Winds of Westernization’ events for spectator games as an uncivilised nation.;;;;;;;;;;;;;x
 option_enable_spectator_mode_title;Option: Set Up Game In Spectator Mode;;;;;;;;;;;;;x
 option_enable_usa_gtfo_africa_desc;With this option, AI USA will NOT get events to reduce its influence in Africa, as historically the USA was not interested in Africa beyond Liberia. This will not affect a player USA. Keep in mind if you enable this, you will likely see weird Yankee things in Africa.;;;;;;;;;;;;;x
 option_enable_usa_gtfo_africa_title;Option: Enable USA influence in Africa;;;;;;;;;;;;;x
@@ -65,7 +65,7 @@ override_change_border_policy_desc;Our immigration laws and our policies towards
 override_change_border_policy_title;Change our Border Policy;;;;;;;;;;;;;x
 override_close_change_border_policy_desc;We decided that our country is good as it is and there won’t be any changes in our immigration policies.;;;;;;;;;;;;;x
 override_close_change_border_policy_title;Hide the Border Policy Options;;;;;;;;;;;;;x
-override_disable_override_desc;This hides the overide decisions from view to reduce clutter.;;;;;;;;;;;;;x
+override_disable_override_desc;This hides the override decisions from view to reduce clutter.;;;;;;;;;;;;;x
 override_disable_override_title;Hide 'Override' Decisions;;;;;;;;;;;;;x
 override_enable_override_desc;This decision shows a menu with number of player only decisions which allow you to force through certain law and RGO changes, as well as using province immigrators.;;;;;;;;;;;;;x
 override_enable_override_title;Show 'Override' Decisions;;;;;;;;;;;;;x
