--- a/TGC/localisation/00_events_0020000.csv
+++ b/TGC/localisation/00_events_0020000.csv
@@ -31,7 +31,7 @@ EVTDESC20110;A recent demonstration in $PROVINCENAME$ has brought attention to t
 EVTNAME20110;Natives in $STATENAME$;;;;;;;;;;;;;x
 EVTOPTA20110;Silence the troublemakers. Immediately.;;;;;;;;;;;;;x
 EVTOPTB20110;Work with these people to solve their issues.;;;;;;;;;;;;;x
-EVTDESC20111;A recent riot in $PROVINCENAME$ has brought a great deal of attention to $STATENAME$-the kind that would normally prompt the great powers to consider intervention. It seems, however, that the demands for independence by ‘uncivilized’ peoples has largely fallen on deaf ears. News of the trouble has faded away as quickly as it began.;;;;;;;;;;;;;x
+EVTDESC20111;A recent riot in $PROVINCENAME$ has brought a great deal of attention to $STATENAME$-the kind that would normally prompt the great powers to consider intervention. It seems, however, that the demands for independence by ‘uncivilised’ peoples has largely fallen on deaf ears. News of the trouble has faded away as quickly as it began.;;;;;;;;;;;;;x
 EVTNAME20111;Trouble in $STATENAME$;;;;;;;;;;;;;x
 EVTOPTA20111;Good. We need no interference in $STATENAME$.;;;;;;;;;;;;;x
 EVTDESC20112;While recent trouble in $STATENAME$ has raised the spectre of foreign intervention once again, there are many who remember the last crisis over $STATENAME$’s people as if it were yesterday. Try as they might, the world is simply not ready to listen to them again-yet.;;;;;;;;;;;;;x
@@ -383,33 +383,33 @@ EVTNAME24601;The Outer Chaco Sale;;;;;;;;;;;;;x
 EVTOPTA24601;Let´s do it.;;;;;;;;;;;;;x
 EVTOPTB24601;We´ll have to politely decline this offer.;;;;;;;;;;;;;x
 EVTOPTC24601;How dare them offer us this useless strips of land!;;;;;;;;;;;;;x
-EVTDESC24603;After we have obtained the remainder of Guiana from the Venezuelans, there still remained an undefined border to the southwest of the territory, near the border with Brazil. Portugal, and later Brazil have both claimed sovereignity over the Upper Takutu River, but have done little to secure this sovereignity in the way of occupation. If we strike quickly, we can occupy the territory and assert our claims. However, it may be wiser to seek a diplomatic solution, rather than risk international condemnation.;;;;;;;;;;;;;x
+EVTDESC24603;After we have obtained the remainder of Guiana from the Venezuelans, there still remained an undefined border to the southwest of the territory, near the border with Brazil. Portugal, and later Brazil have both claimed sovereignty over the Upper Takutu River, but have done little to secure this sovereignty in the way of occupation. If we strike quickly, we can occupy the territory and assert our claims. However, it may be wiser to seek a diplomatic solution, rather than risk international condemnation.;;;;;;;;;;;;;x
 EVTNAME24603;The Guiana boundary case;;;;;;;;;;;;;x
 EVTOPTA24603;We will take what is ours;;;;;;;;;;;;;x
 EVTOPTB24603;We should seek arbitration by another great power;;;;;;;;;;;;;x
 EVTOPTC24603;We're not currently in a position to contest this territory;;;;;;;;;;;;;x
-EVTDESC24604;We have been approached by representatives from Brazil and the United Kingdom to settle a disputed border between British Guiana and the Brazillian Amazon. This trust that we are shown is a testament to our status as a great power, and as such we should judge justly and fairly.;;;;;;;;;;;;;x
+EVTDESC24604;We have been approached by representatives from Brazil and the United Kingdom to settle a disputed border between British Guiana and the Brazilian Amazon. This trust that we are shown is a testament to our status as a great power, and as such we should judge justly and fairly.;;;;;;;;;;;;;x
 EVTNAME24604;The Guiana boundary case;;;;;;;;;;;;;x
-EVTOPTA24604;Decide in favor of Brazil;;;;;;;;;;;;;x
-EVTOPTB24604;Decide in favor of Britain;;;;;;;;;;;;;x
-EVTDESC24605;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centers lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Northern Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours.;;;;;;;;;;;;;x
+EVTOPTA24604;Decide in favour of Brazil;;;;;;;;;;;;;x
+EVTOPTB24604;Decide in favour of Britain;;;;;;;;;;;;;x
+EVTDESC24605;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centres lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Northern Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours.;;;;;;;;;;;;;x
 EVTNAME24605;The Fate of Paraguay;;;;;;;;;;;;;x
 EVTOPTA24605;Claim the Northern Chaco;;;;;;;;;;;;;x
-EVTOPTB24605;We will not impede on Paraguayan sovereignity;;;;;;;;;;;;;x
-EVTDESC24606;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centers lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Gran Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours. However, some of our claims in the region clash with those made by Argentina.;;;;;;;;;;;;;x
+EVTOPTB24605;We will not impede on Paraguayan sovereignty;;;;;;;;;;;;;x
+EVTDESC24606;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centres lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Gran Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours. However, some of our claims in the region clash with those made by Argentina.;;;;;;;;;;;;;x
 EVTNAME24606;The Fate of Paraguay;;;;;;;;;;;;;x
 EVTOPTA24606;Claim Northern and Central Chaco;;;;;;;;;;;;;x
 EVTOPTB24606;Claim just the Northern Chaco;;;;;;;;;;;;;x
-EVTOPTC24606;We will not impede on Paraguayan sovereignity;;;;;;;;;;;;;x
-EVTDESC24607;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centers lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Central Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours. However, some of our claims in the region clash with those made by Bolivia.;;;;;;;;;;;;;x
+EVTOPTC24606;We will not impede on Paraguayan sovereignty;;;;;;;;;;;;;x
+EVTDESC24607;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centres lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Central Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours. However, some of our claims in the region clash with those made by Bolivia.;;;;;;;;;;;;;x
 EVTNAME24607;The Fate of Paraguay;;;;;;;;;;;;;x
 EVTOPTA24607;Claim the Central Chaco;;;;;;;;;;;;;x
-EVTOPTB24607;We will not impede on Paraguayan sovereignity;;;;;;;;;;;;;x
-EVTDESC24608;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centers lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Gran Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours. However, some of our claims in the region clash with those made by Bolivia.;;;;;;;;;;;;;x
+EVTOPTB24607;We will not impede on Paraguayan sovereignty;;;;;;;;;;;;;x
+EVTDESC24608;News has reached us that Brazil has decided to claim Paraguay proper as their own. The area, also known as Region Oriental, is where most of the Paraguayan population centres lay, and without it, Paraguay would be left a rump state, if at all. We have some unresolved territorial disputes with Paraguay in the Gran Chaco, and now that Paraguay's future is being called into question, many in our parliament are demanding that we assert what is ours. However, some of our claims in the region clash with those made by Bolivia.;;;;;;;;;;;;;x
 EVTNAME24608;The Fate of Paraguay;;;;;;;;;;;;;x
 EVTOPTA24608;Claim Southern and Central Chaco;;;;;;;;;;;;;x
 EVTOPTB24608;Claim just the Southern Chaco;;;;;;;;;;;;;x
-EVTOPTC24608;We will not impede on Paraguayan sovereignity;;;;;;;;;;;;;x
+EVTOPTC24608;We will not impede on Paraguayan sovereignty;;;;;;;;;;;;;x
 EVTDESC29900;‘Mother, mother! Old man Johnson has bought a new machine! It can plough, pull, tear, move, and you can ride on it! He says it’s called a ‘tractor’!’\n \n The advent of the tractor in $PROVINCENAME$ has led to a revolution in local agriculture, with farm output increasing on a scale unfathomable a mere generation ago. Truly, the boons of industry are good unto $COUNTRY$.;;;;;;;;;;;;;x
 EVTNAME29900;A shiny new Tractor!;;;;;;;;;;;;;x
 EVTOPTA29900;Truly, ‘tis.;C'est certain.;Aber echt!;;;;;;;;;;;x
