--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -128,7 +128,7 @@ sad_sack;Sad Sack§R-2 Attack;Raté;Trauriger Sack;;;;;;;;;;;x
 scared;Scared §R-1 Defence;Craintif;Verängstigt;;;;;;;;;;;x
 school_of_defense;School of Defence §B+3 Defence;École de défense;Schule der Verteidigung;;;;;;;;;;;x
 school_of_firepower;School of Firepower §W+1 Attack;École de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
-school_of_offense;School of Offense §W+1 Attack;École d'attaque;Schule der Offensive;;;;;;;;;;;x
+school_of_offense;School of Offence §W+1 Attack;École d'attaque;Schule der Offensive;;;;;;;;;;;x
 school_of_the_bayonet;School of the Bayonet §G+2 Attack §W+1 Defence;École de la baïonnette;Schule des Bajonetts;;;;;;;;;;;x
 secretive;Secretive;;;;;;;;;;;;;x
 sharp;Sharp;Malin;Klug;;;;;;;;;;;x
