--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -3,7 +3,7 @@ army_tech_school;Military-Industrial Complex;;;;;;;;;;;;;x
 chinese_tech_school;The Three Principles of the People;;;;;;;;;;;;;x
 commerce_tech_school;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
 culture_tech_school;Avantgarde Intelligentsia;;;;;;;;;;;;;x
-czech_tech_school;Škoda Works;;;;;;;;;;;;;x
+czech_tech_school;Å koda Works;;;;;;;;;;;;;x
 industrial_tech_school;Corporative Industrialism;;;;;;;;;;;;;x
 japanese_tech_school;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
 naval_tech_school;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
