--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -5280,7 +5280,7 @@ SAVED_GAMES;Saved Game;Partie sauvegardée;;;;;;;;;;;;x
 SCAL_CON_EFFECT;The percentage of people that $VERB$ §Y$CAT$§W $DIRECTION$ $VALUE$ Consciousness.\n;Pourcentage de gens qui $VERB$ §Y$CAT$§W $DIRECTION$ $VALUE$ en conscience nationale.\n;;;;;;;;;;;;x
 SCAL_MILITANCY_EFFECT;The percentage of people that $VERB$ §Y$CAT$§W $DIRECTION$ $VALUE$ Militancy.\n;Le pourcentage de gens qui $VERB$ §Y$CAT$§W $DIRECTION$ $VALUE$ en militantisme.\n;;;;;;;;;;;;x
 SCAN;Scan;Rechercher;;;;;;;;;;;;x
-SCHOOL_EFFECT;Get the title of §Y$NAME$§!.\n;Remplacement par §Y$NAME$§W !\n;;;;;;;;;;;;x
+SCHOOL_EFFECT;Change to §Y$NAME$§!\n;Remplacement par §Y$NAME$§W !\n;;;;;;;;;;;;x
 sea_zone;Sea Zone;Zone maritime;Seezone;;;;;;;;;;;x
 SECEDE_PROVINCE;Cede §Y$WHERE$§W to §Y$WHO$§W.\n;Cession de §Y$WHERE$§W à §Y$WHO$§W.\n;;;;;;;;;;;;x
 second_power;Secondary Power;Puissance secondaire;;;;;;;;;;;;x
