--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -1347,7 +1347,7 @@ chief_of_navy;Chief of Navy;Chef de la marine;;;;;;;;;;;;x
 chief_of_staff;Chief of Staff;Chef d'état-major;;;;;;;;;;;;x
 city;City;Ville;;;;;;;;;;;;x
 city_population;City Population;Population de la ville;Stadtbevölkerung;;;;;;;;;;;x
-civ_nation;Civilized Nation;Nation civilisée;;;;;;;;;;;;x
+civ_nation;Lesser Power;Nation civilisée;;;;;;;;;;;;x
 CIVILIZE_DESC;Fully embrace western ideas. This will give us access to the technological advances of our sphere leader;Embrasser entièrement les idées occidentales : cela nous donnera accès aux technologies avancées du pays dominant de notre sphère.;;;;;;;;;;;;x
 CIVILIZE_NO_MASTER_DESC;Fully embrace western ideas. This will give us access to the technological advances from around the world;Embrasser entièrement les idées occidentales : cela nous donnera accès aux technologies avancées du monde entier.;;;;;;;;;;;;x
 CIVILIZED_EFFECT;Become a §YCivilized Nation§W\n;Devenir une §Ynation civilisée§W.\n;;;;;;;;;;;;x
